--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <input class="input-group-field" type="text" autocomplete="off">
     <div class="input-group-button">
       <!-- <button  class="button float-right" id=searchButton value="Search">Search</button> -->
-      <!-- <button type="submit" id="searchButton"><i class="fas fa-save float-right"></i></button> -->
+      <button type="submit" id="searchButton"><i class="fas fa-save float-right"></i></button>
     </div>
   </div>
 </form> 
@@ -130,7 +130,7 @@
     <div class="cell">
       <div class="card">
         <div class="card-section">
-        <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Character about them</h4>
+        <h4 style="font-family: 'Bangers', cursive;">Main Character 1</h4>
         <img class="cardImage" src="https://via.placeholder.com/550x550">
           <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
@@ -140,7 +140,7 @@
       <div class="cell">
         <div class="card">
           <div class="card-section">
-            <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Movies they were in</h4>
+            <h4 style="font-family: 'Bangers', cursive;">Main Character 2</h4>
           <img class="cardImage" src="https://via.placeholder.com/550x550">
             <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -150,7 +150,7 @@
         <div class="cell">
           <div class="card">
             <div class="card-section">
-              <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Comic book series</h4>
+              <h4 style="font-family: 'Bangers', cursive;">Main Character 3</h4>
             <img class="cardImage" src="https://via.placeholder.com/550x550">
               <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
@@ -160,13 +160,32 @@
           <div class="cell">
             <div class="card">
               <div class="card-section">
-                <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Movies they were in</h4>
+                <h4 style="font-family: 'Bangers', cursive;">Main Character 4</h4>
               <img class="cardImage" src="https://via.placeholder.com/550x550">
                 <p class="pCards test">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
               </div>
             </div>
 
+            <div class="cell">
+              <div class="card">
+                <div class="card-section">
+                  <h4 style="font-family: 'Bangers', cursive;">Main Character 5</h4>
+                <img class="cardImage" src="https://via.placeholder.com/550x550">
+                  <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                </div>
+              </div>
+
+              <div class="cell">
+                <div class="card">
+                  <div class="card-section">
+                    <h4 style="font-family: 'Bangers', cursive;">Main Character 6</h4>
+                  <img class="cardImage" src="https://via.placeholder.com/550x550">
+                    <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  </div>
+                  </div>
+                </div>
 
   </div>
 </div>
