--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  ​
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -18,156 +17,115 @@
       href="https://cdn.jsdelivr.net/npm/motion-ui@1.2.3/dist/motion-ui.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel=“stylesheet”
+    href=“https://use.fontawesome.com/releases/v5.8.1/css/all.css”
+    integrity=“sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf”
+    crossorigin=“anonymous” />
   </head>
-  ​
   <body>
-    <!-- section for carousel -->
-    <section>
-      <main
-        class="orbit"
-        role="region"
-        aria-label="Favorite Space Pictures"
-        data-orbit
-      >
-        <div class="orbit-wrapper">
-          <div class="orbit-controls">
-            <button class="orbit-previous">
-              <span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;
-            </button>
-            <button class="orbit-next">
-              <span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;
-            </button>
-          </div>
-
-          <ul class="orbit-container">
-            <li class="is-active orbit-slide">
-              <figure class="orbit-figure">
-                <img
-                  class="orbit-image"
-                  src="https://cdn.onebauer.media/one/media/5d94/d7c8/c11f/b27f/c031/c3fc/mcu-endgame-main.jpg?quality=50&width=1800&ratio=16-9&resizeStyle=aspectfill&format=jpg"
-                  alt="Space"
-                />
-                <figcaption class="orbit-caption">
-                  Space, the final frontier.
-                </figcaption>
-              </figure>
-            </li>
-            <li class="orbit-slide">
-              <figure class="orbit-figure">
-                <img
-                  class="orbit-image"
-                  src="https://cdn.onebauer.media/one/media/5d95/e45e/c11f/b298/9e31/df56/avengers-assemble.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg"
-                  alt="Space"
-                />
-                <figcaption class="orbit-caption">Lets Rocket!</figcaption>
-              </figure>
-            </li>
-            <li class="orbit-slide">
-              <figure class="orbit-figure">
-                <img
-                  class="orbit-image"
-                  src="https://cdn.onebauer.media/one/media/5d95/e4bf/c11f/b205/7c31/df63/avengers-endgame.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg"
-                  alt="Space"
-                />
-                <figcaption class="orbit-caption">Encapsulating</figcaption>
-              </figure>
-            </li>
-            <li class="orbit-slide">
-              <figure class="orbit-figure">
-                <img
-                  class="orbit-image"
-                  src="https://cdn.onebauer.media/one/media/5d94/d3b0/c11f/b232/6131/c391/ant-man-and-the-wasp.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg"
-                  alt="Space"
-                />
-                <figcaption class="orbit-caption">Outta This World</figcaption>
-              </figure>
-            </li>
-          </ul>
-        </div>
-
-        <nav class="orbit-bullets">
-          <button class="is-active" data-slide="0">
-            <!-- This button starts 1st -->
-            <span class="show-for-sr">First slide details.</span>
-            <span class="show-for-sr" data-slide-active-label
-              >Current Slide</span
-            >
-          </button>
-          <button data-slide="1">
-            <span class="show-for-sr">Second slide details.</span>
-          </button>
-          <button data-slide="2">
-            <span class="show-for-sr">Third slide details.</span>
-          </button>
-          <button data-slide="3">
-            <span class="show-for-sr">Fourth slide details.</span>
-          </button>
-        </nav>
-      </main>
-    </section>
-
+    <!-- section for carousel
+<section>
+  <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+    <div class="orbit-wrapper">
+      <div class="orbit-controls">
+        <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+        <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+      </div>
+      <ul class="orbit-container">
+        <li class="is-active orbit-slide">
+          <figure class="orbit-figure">
+            <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d94/d7c8/c11f/b27f/c031/c3fc/mcu-endgame-main.jpg?quality=50&width=1800&ratio=16-9&resizeStyle=aspectfill&format=jpg" alt="Space">
+            <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+          </figure>
+        </li>
+        <li class="orbit-slide">
+          <figure class="orbit-figure">
+            <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d95/e45e/c11f/b298/9e31/df56/avengers-assemble.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg" alt="Space">
+            <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+          </figure>
+        </li>
+        <li class="orbit-slide">
+          <figure class="orbit-figure">
+            <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d95/e4bf/c11f/b205/7c31/df63/avengers-endgame.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg" alt="Space">
+            <figcaption class="orbit-caption">Encapsulating</figcaption>
+          </figure>
+        </li>
+        <li class="orbit-slide">
+          <figure class="orbit-figure">
+            <img class="orbit-image" src="https://cdn.onebauer.media/one/media/5d94/d3b0/c11f/b232/6131/c391/ant-man-and-the-wasp.jpg?quality=50&width=800&height=520&ratio=1-1&resizeStyle=aspectfit&format=jpg" alt="Space">
+            <figcaption class="orbit-caption">Outta This World</figcaption>
+          </figure>
+        </li>
+      </ul>
+    </div>
+    <nav class="orbit-bullets">
+      <button class="is-active" data-slide="0">
+        This button starts 1st -->
+    <!-- <span class="show-for-sr">First slide details.</span>
+        <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+      </button>
+      <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+      <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+      <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+    </nav>
+  </main>
+</section>  -->
+    <img src="Images/header.png" alt="" />
     <!-- <img src="Images/Universe.png" alt="Marvel Universe Image"> -->
-
-    <!-- Dropdown Menu -->
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li>
-        <a href="#">Characters</a>
-        <ul class="menu">
-          <li><button href="#">Black-Widow</button></li>
-          <li><button href="#">Captain-America</button></li>
-          <li><button href="#">Hulk</button></li>
-          <li><button href="#">Iron-Man</button></li>
-          <!-- Extra Characters -->
+    <div class="nav-container">
+      <div class="nav-left">
+        <!-- Dropdown Menu -->
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li>
+            <a href="#">Movies</a>
+            <ul class="menu">
+              <li><button href="#">Black-Widow</button></li>
+              <li><button href="#">Captain-America</button></li>
+              <li><button href="#">Hulk</button></li>
+              <li><button href="#">Iron-Man</button></li>
+              <!-- Extra Movies -->
+            </ul>
+          </li>
+          <li>
+            <a href="#">Comics</a>
+            <ul class="menu" style="text-align: center">
+              <li>
+                <button href="#">Captain-America: The First Avenger</button>
+              </li>
+              <li><button href="#">Captain Marvel</button></li>
+              <li><button href="#">Iron Man</button></li>
+              <li><button href="#">Iron Man 2</button></li>
+              <!--Add extra comics below -->
+            </ul>
+          </li>
+          <li>
+            <a href="#">Characters</a>
+            <ul class="menu">
+              <li><button href="#">Deadpool</button></li>
+              <li><button href="#">Wolverine</button></li>
+              <li><button href="#">Loki</button></li>
+              <li><button href="#">Black Panther</button></li>
+              <!--Add extra characters  -->
+            </ul>
+          </li>
         </ul>
-      </li>
-
-      <li>
-        <a href="#">Movies</a>
-        <ul class="menu" style="text-align: center">
-          <li><button href="#">Captain-America: The First Avenger</button></li>
-          <li><button href="#">Captain Marvel</button></li>
-          <li><button href="#">Iron Man</button></li>
-          <li><button href="#">Iron Man 2</button></li>
-          <!--Add extra movies below -->
-        </ul>
-      </li>
-
-      <li>
-        <a href="#">Comics</a>
-        <ul class="menu">
-          <li><button href="#">Deadpool</button></li>
-          <li><button href="#">Wolverine</button></li>
-          <li><button href="#">Loki</button></li>
-          <li><button href="#">Black Panther</button></li>
-          <!--Add extra comics  -->
-        </ul>
-      </li>
-      <!--Search Bar-->
-      <form class="searchBar" autocomplete="on">
-        <div class="input-group">
-          <input
-            class="input-group-field"
-            type="text"
-            autocomplete="off"
-            id="searchBarField"
-          />
-          <div class="input-group-button">
-            <button
-              type="submit"
-              class="button float-right"
-              id="searchButton"
-              value="Search"
-            >
-              Search
-            </button>
+      </div>
+      <div class="nav-right">
+        <!--Search Bar-->
+        <form class="searchBar" autocomplete="on">
+          <div class="input-group">
+            <input class="input-group-field" type="text" autocomplete="off" />
+            <div class="input-group-button">
+              <!-- <button  class="button float-right" id=searchButton value="Search">Search</button> -->
+              <!-- <button type="submit" id="searchButton"><i class="fas fa-save float-right"></i></button> -->
+            </div>
           </div>
-        </div>
-      </form>
-    </ul>
+        </form>
+      </div>
+    </div>
     <!--Cards Section-->
-
     <div class="grid-container">
-      <div id="cardAttach" class="grid-x grid-margin-x small-up-2 medium-up-3">
+      <div class="grid-x grid-margin-x small-up-2 medium-up-3">
         <div class="cell">
           <div class="card">
             <div class="card-section">
@@ -190,7 +148,6 @@
             </div>
           </div>
         </div>
-
         <div class="cell">
           <div class="card">
             <div class="card-section">
@@ -213,7 +170,6 @@
             </div>
           </div>
         </div>
-
         <div class="cell">
           <div class="card">
             <div class="card-section">
@@ -236,11 +192,10 @@
             </div>
           </div>
         </div>
-
         <div class="cell">
           <div class="card">
             <div class="card-section">
-              <h4 class="test" style="font-family: 'Bangers', cursive">
+              <h4 style="font-family: 'Bangers', cursive">
                 Iron-Man/Movies they were in
               </h4>
               <img
@@ -261,7 +216,6 @@
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="row">
         <div
@@ -339,15 +293,13 @@
         </div>
       </div>
     </div>
-
-    <!-- <script src ="content-slider.js"></script> -->
+    <script src="content-slider.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
       integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
       crossorigin="anonymous"
     ></script>
     <!-- <script src="js/vendor/what-input.js"></script> -->
-
     <!-- Compressed JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
@@ -357,7 +309,6 @@
     <script>
       $(document).foundation();
     </script>
-    ​
     <script src="script.js"></script>
   </body>
 </html>
