movie poster, title & year to appear at the bottom

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <div class="nav-container">
       <div class="nav-left">
         <!-- Dropdown Menu -->
-        <ul class="dropdown menu" data-dropdown-menu>
+        <ul class="dropdown menu" data-dropdown-menu id="movieDropDown">
           <li>
-            <a href="#">Movies</a>
+            <a href="#" id="movieDropDown" >Movies</a>
             <ul class="menu">
               <li><button href="#">Black-Widow</button></li>
               <li><button href="#">Captain-America</button></li>
@@ -147,10 +147,7 @@
           <div class="card">
             <div class="card-section">
               <h4 style="font-family: 'Bangers', cursive">Main Character 1</h4>
-              <img
-                class="cardImage"
-                src="https://via.placeholder.com/550x550"
-              />
+              <img class="cardImg" src="https://via.placeholder.com/550x550" />
               <p class="pCards">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -168,10 +165,7 @@
           <div class="card">
             <div class="card-section">
               <h4 style="font-family: 'Bangers', cursive">Main Character 2</h4>
-              <img
-                class="cardImage"
-                src="https://via.placeholder.com/550x550"
-              />
+              <img class="cardImg" src="https://via.placeholder.com/550x550" />
               <p class="pCards">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -189,10 +183,7 @@
           <div class="card">
             <div class="card-section">
               <h4 style="font-family: 'Bangers', cursive">Main Character 3</h4>
-              <img
-                class="cardImage"
-                src="https://via.placeholder.com/550x550"
-              />
+              <img class="cardImg" src="https://via.placeholder.com/550x550" />
               <p class="pCards">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -210,10 +201,7 @@
           <div class="card">
             <div class="card-section">
               <h4 style="font-family: 'Bangers', cursive">Main Character 4</h4>
-              <img
-                class="cardImage"
-                src="https://via.placeholder.com/550x550"
-              />
+              <img class="cardImg" src="https://via.placeholder.com/550x550" />
               <p class="pCards test">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -231,10 +219,7 @@
           <div class="card">
             <div class="card-section">
               <h4 style="font-family: 'Bangers', cursive">Main Character 5</h4>
-              <img
-                class="cardImage"
-                src="https://via.placeholder.com/550x550"
-              />
+              <img class="cardImg" src="https://via.placeholder.com/550x550" />
               <p class="pCards">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -252,10 +237,7 @@
           <div class="card">
             <div class="card-section">
               <h4 style="font-family: 'Bangers', cursive">Main Character 6</h4>
-              <img
-                class="cardImage"
-                src="https://via.placeholder.com/550x550"
-              />
+              <img class="cardImg" src="https://via.placeholder.com/550x550" />
               <p class="pCards">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -338,16 +320,15 @@
             data-margin-top="6"
             data-anchor="example1"
           >
-            <img
+            <img id="heroPic"
               class="thumbnail"
-              src="rectangle-3.jpg"
-              style="width: 450px; height: 380px"
               alt="Placeholder"
             />
           </div>
         </div>
       </div>
     </div>
+  </div>
 
     <script src="content-slider.js"></script>
     <script
