Hard coded movies list for render testing for now until I can figure out how to get each button on its own with the for loop I commented out for now. Resized header image so that it is not occupying the whole top of the page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 ​
 <!-- Header Image styled and created by Jack-->
 <header>
-  <img src="Images/header.png" style="max-height: fit-content;" alt="Marvel Characters Image">
+  <img src="Images/header.png" style="height:415px; width: 100%;" alt="Marvel Characters Image">
 </header>
 
 <body>
@@ -30,10 +30,31 @@
     <li>
       <a href="#">Movies</a>
       <ul class="menu" style="text-align: center;">
-        <li><button id="movie-options" href="#"></button></li>
-
 <!-- var moviesMenu = $("#movie-options"); -->
-         <li><button href="#">Captain-America</button></li>
+         <li><button class="movie-options" href="#">Captain America: The First Avenger</button></li>
+         <li><button href="#">Captain Marvel</button></li>
+         <li><button href="#">Iron Man</button></li>
+         <li><button href="#">Iron Man 2</button></li>
+         <li><button href="#">The Incredible Hulk</button></li>
+         <li><button href="#">Thor</button></li>
+         <li><button href="#">The Avengers</button></li>
+         <li><button href="#">Iron Man 3</button></li>
+         <li><button href="#">Thor: The Dark World</button></li>
+         <li><button href="#">Captain America: The Winter Soldier</button></li>
+         <li><button href="#">Guardians of the Galaxy</button></li>
+         <li><button href="#">Guardians of the Galaxy Vol 2</button></li>
+         <li><button href="#">Avengers: Age of Ultron</button></li>
+         <li><button href="#">Ant-Man</button></li>
+         <li><button href="#">Captain America: Civil War</button></li>
+         <li><button href="#">Doctor Strange</button></li>
+         <li><button href="#">Black Panther</button></li>
+         <li><button href="#">Spider-Man: Homecoming</button></li>
+         <li><button href="#">Thor: Ragnarok</button></li>
+         <li><button href="#">Ant-Man and the Wasp</button></li>
+         <li><button href="#">Avengers: Infinity War</button></li>
+         <li><button href="#">Avengers: Endgame</button></li>
+         <li><button href="#">Spider-Man: Far From Home</button></li>
+
         <!-- Extra Movies -->
       </ul>
     </li>
