attempt with drop down
first try, may change later

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     <div class="nav-container">
       <div class="nav-left">
         <!-- Dropdown Menu -->
+        
         <ul class="dropdown menu" data-dropdown-menu id="movieDropDown">
           <li>
-            <a href="#" id="movieDropDown" >Movies</a>
+            <a href="#">Movies</a>
             <ul class="menu">
-              <li><button href="#">Black-Widow</button></li>
-              <li><button href="#">Captain-America</button></li>
-              <li><button href="#">Hulk</button></li>
-              <li><button href="#">Iron-Man</button></li>
+              <li><select id= "selectMovieID"></select></li>
+             
+
               <!-- Extra Movies -->
             </ul>
           </li>
