--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 ​
 <!-- Header Image styled and created by Jack-->
 <header>
-  <img src="Images/header.png" style="height:415px; width: 100%;" alt="Marvel Characters Image">
+  <img src="Images/header.png" class="headerImage" style="height:415px; width: 100%;" alt="Marvel Characters Image">
 </header>
 
 <body>
@@ -29,34 +29,7 @@
   <ul class="dropdown menu" data-dropdown-menu>
     <li>
       <a href="#">Movies</a>
-      <ul class="menu" style="text-align: center;">
-<!-- var moviesMenu = $("#movie-options"); -->
-         <li><button class="movie-options" href="#">Captain America: The First Avenger</button></li>
-         <li><button href="#">Captain Marvel</button></li>
-         <li><button href="#">Iron Man</button></li>
-         <li><button href="#">Iron Man 2</button></li>
-         <li><button href="#">The Incredible Hulk</button></li>
-         <li><button href="#">Thor</button></li>
-         <li><button href="#">The Avengers</button></li>
-         <li><button href="#">Iron Man 3</button></li>
-         <li><button href="#">Thor: The Dark World</button></li>
-         <li><button href="#">Captain America: The Winter Soldier</button></li>
-         <li><button href="#">Guardians of the Galaxy</button></li>
-         <li><button href="#">Guardians of the Galaxy Vol 2</button></li>
-         <li><button href="#">Avengers: Age of Ultron</button></li>
-         <li><button href="#">Ant-Man</button></li>
-         <li><button href="#">Captain America: Civil War</button></li>
-         <li><button href="#">Doctor Strange</button></li>
-         <li><button href="#">Black Panther</button></li>
-         <li><button href="#">Spider-Man: Homecoming</button></li>
-         <li><button href="#">Thor: Ragnarok</button></li>
-         <li><button href="#">Ant-Man and the Wasp</button></li>
-         <li><button href="#">Avengers: Infinity War</button></li>
-         <li><button href="#">Avengers: Endgame</button></li>
-         <li><button href="#">Spider-Man: Far From Home</button></li>
-
-        <!-- Extra Movies -->
-      </ul>
+      <ul class="menu movie-options" style="text-align: center;"></ul>
     </li>
   
     <li>
@@ -167,7 +140,7 @@
 
 <section id="firstCarousel">
   <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-    <div class="orbit-wrapper">
+    <div class="orbit-wrapper" style="height: 1339.97px; width: 1200px; align-content: center;">
       
       <div class="orbit-controls">
         <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
