--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="cell">
           <div class="card zoom">
             <div class="card-section">
-            <h4 style="font-family: 'Bangers', cursive;">Main Character 1</h4>
+            <h4 id= "cardName1" style="font-family: 'Bangers', cursive;"> </h4>
             <img class="cardImage1" src="https://via.placeholder.com/550x550">
               <p class="pCards1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
@@ -119,7 +119,7 @@
             <div class="cell">
               <div class="card zoom">
                 <div class="card-section">
-                  <h4 style="font-family: 'Bangers', cursive;">Main Character 3</h4>
+                  <h4 style="font-family: 'Bangers', cursive;"> Main Character 3</h4>
                 <img class="cardImage3" src="https://via.placeholder.com/550x550">
                   <p class="pCards3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
@@ -129,7 +129,7 @@
               <div class="cell">
                 <div class="card zoom">
                   <div class="card-section">
-                    <h4 style="font-family: 'Bangers', cursive;">Main Character 4</h4>
+                    <h4 style="font-family: 'Bangers', cursive;"></h4>
                   <img class="cardImage4" src="https://via.placeholder.com/550x550">
                     <p class="pCards4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   </div>
@@ -169,6 +169,7 @@
         >
           <div class="container Moving">
             <p id="doodle">
+              
              
           </div>
         </div>
